syntax = "proto3";

package board;

service BoardService {
    rpc CreateBoard (CreateBoardDTO) returns (BoardResponse) {}
    rpc GetBoard (BoardRequest) returns (BoardResponse) {}
    rpc ValidateBoardOwner (BoardOwnerRequest) returns (BoardOwnerResponse) {}
}

message BoardRequest {
    string id = 1;
}

message BoardResponse {
    string id = 1;
    string title = 2;
    string content = 3;
    string userid = 4;
}

message CreateBoardDTO {
    int32 id = 1;
    int32 userid = 2;
    string title = 3;
    string content = 4;
    int64 createdAt = 5;
    int64 updatedAt = 6;
}

message BoardOwnerRequest {
    string boardid = 1;
    string userid = 2;
}

message BoardOwnerResponse {
    bool isValid = 1;
}